fix: fix magane horizontal scrollbar

--- a/src/modules/plugins-compatibility/magane.scss
+++ b/src/modules/plugins-compatibility/magane.scss
@@ -134,6 +134,7 @@ div#magane {
 
   ::-webkit-scrollbar {
     width: 6px !important;
+    height: 6px !important;
 
     &-thumb {
       border-radius: var(--popout-radius) !important
